# FlutterCodes

./: .gitignore  MobX.md  README.md  configs.json
02_magoney/magoney_backend/: .env  Cargo.toml
02_magoney/magoney_backend/docs/queries/app_info/: create.sql
02_magoney/magoney_backend/docs/queries/receipt/: create.sql
02_magoney/magoney_backend/docs/queries/receipt_symbol/: create.sql
02_magoney/magoney_backend/docs/queries/record_symbol/: create.sql
02_magoney/magoney_backend/docs/queries/records/: create.sql
02_magoney/magoney_backend/docs/queries/user_info/: create.sql
02_magoney/magoney_backend/migrations/: 20220519173348_initialMigrate.sql
02_magoney/magoney_backend/src/: error.rs  main.rs
02_magoney/magoney_backend/src/routes/: dispatcher.rs  mod.rs
02_magoney/magoney_backend/src/routes/receipts/: handlers.rs  repository.rs  router.rs  types.rs
02_magoney/magoney_backend/src/routes/receipts/entities/: create_one.rs  mod.rs  read_all.rs  read_one.rs  update_one.rs
02_magoney/magoney_backend/src/routes/records/: handlers.rs  mod.rs  repository.rs  router.rs  types.rs
02_magoney/magoney_backend/src/routes/records/entities/: create_one.rs  mod.rs  read_all.rs  update_one.rs
1_magoney/magoney_backend/: .env  Cargo.toml
1_magoney/magoney_backend/src/: error.rs
1_magoney/magoney_backend/src/routes/: dispatcher.rs  mod.rs
1_magoney/magoney_backend/src/routes/fc_route/: types.rs
1_magoney/magoney_backend/src/routes/fc_route/entities/: create_entity.rs  mod.rs
1_magoney/magoney_backend/src/routes/fc_route/handlers/: create_one_handler.rs  delete_one_by_code_handler.rs  mod.rs  read_all_handler.rs  read_count_handler.rs  update_one_by_code_handler.rs
designpatterns/: README.md  pubspec.yaml
hellocounter/: AppImageBuilder.yml  CODES.md  README.md  TODOS.md  pubspec.yaml
learning/: inheritedWidget.dart
(+338 files in other folders)
