[package]
name = "magoney_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
axum = { version = "0.5.6" }
chrono = { version = "0.4.19", features = ["serde"] }
tokio = { version = "1.18.2", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tower = { version = "0.4.12", features = ["util"] }
tower-http = { version = "0.3.3", features = ["trace", "cors"] }
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
sqlx = { version = "0.5.13", features = [
    "postgres",
    "macros",
    "chrono",
    "time",
    "uuid",
    "offline",
    "runtime-tokio-rustls",
] }
utoipa = { version = "1.0.2", features = [
    "uuid",
    "json",
    "chrono",
    "debug",
    "chrono_with_format",
    "yaml",
] }
utoipa-swagger-ui = { version = "1.0.0" }
uuid = { version = "1.0.0", features = ["serde", "fast-rng", "v4"] }
thiserror = "1.0.31"
