[package]
name = "magoney_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
axum = "0.5.6"
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = ["full"] }
tower = { version = "0.4.12", features = ["util"] }
tower-http = { version = "0.3.0", features = ["cors", "trace"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sqlx = { version = "0.5.13", features = [
    "all-types",
    "postgres",
    "macros",
    "runtime-tokio-rustls",
] }
uuid = { version = "1.0.0", features = ["v4", "serde"] }
async-trait = "0.1.53"

[profile.dev.package.sqlx-macros]
opt-level = 3
